Changed in the build file so the image gets tagged with the branches name as the tag. SOm new CRUD-operations have been added aswell
